correction de la boite score version mobile

--- a/style.css
+++ b/style.css
@@ -67,11 +67,22 @@ header {
 @media (max-width : 450px){
   header{
     justify-content: center;
-    height: 26vh;
+    height: 30vh;
   }
   .score-background{
-    height: 10vh;
+    height: 12vh;
     width: 90%;
+    .display {
+      .display_title {
+        font-size: 1.5rem;
+      }
+      .display_value{
+        font-size: 0.8rem;
+        em {
+          font-size: 2.5rem;
+        }
+      } 
+    }
   }
 }
 
